Change the '–' (medium dash) character to the '--' TeX code.

--- a/main.lyx
+++ b/main.lyx
@@ -1116,9 +1116,9 @@ Contrastes de Loire
 
 \begin_layout Standard
 Digoin et son pont-canal sont derrière nous, depuis trois bons jours.
- Hier, c'est la ville de Decize que nous avons passée – après une pression
- fraîche et un petit portage très chiant – en compagnie d'un kayakiste en
- vacances, descendant la Loire jusqu'à Orléans.
+ Hier, c'est la ville de Decize que nous avons passée -- après une pression
+ fraîche et un petit portage très chiant -- en compagnie d'un kayakiste
+ en vacances, descendant la Loire jusqu'à Orléans.
  Nous nous sommes suivis : nous, lourds comme un sac à patates, le kayak
  bourré de victuailles, zigzaguant péniblement ; lui, léger sur son blanc
  esquif
@@ -1192,7 +1192,7 @@ heures.
 \begin_inset space ~
 \end_inset
 
-jours – docteur – que nous petit-déjeunons sous un soleil déjà bien haut.
+jours -- docteur -- que nous petit-déjeunons sous un soleil déjà bien haut.
  Aucune aurore dans nos têtes ; cela commence à être problématique pour
  le moral (impression d'être deux bons à rien, gâchant le temps).
  Mais nous en reparlerons plus tard, probablement.
@@ -1212,7 +1212,7 @@ Centrale nucléaire de Belleville.
 \end_inset
 
 .
- Nous la passerons dans l'après-midi – tranquillement – savourant cette
+ Nous la passerons dans l'après-midi -- tranquillement -- savourant cette
  journée de repos.
  Puis dimanche, Orléans la pucelle pointera les faubourgs de son nez.
 \shape smallcaps
@@ -1228,8 +1228,8 @@ Le temps file ; le trait sur la carte avance bien, mine de rien.
 \begin_inset Newline newline
 \end_inset
 
-À notre quinzième jour de navigation, nous avions vu défiler – au total
- – 185
+À notre quinzième jour de navigation, nous avions vu défiler -- au total
+ -- 185
 \begin_inset space ~
 \end_inset
 
@@ -1475,7 +1475,7 @@ Poésie à part, voici, plus pragmatique, notre Loire.
  Villes, champs, ponts, routes...
  fleurissent et étouffent la Loire, autant que la renoncule des rivières,
  plante envahissante, au parfum néanmoins doux et agréable.
- Ces villes ont un beau patrimoine et méritent – tout de même – de larges
+ Ces villes ont un beau patrimoine et méritent -- tout de même -- de larges
  détours, pour ceux qui aiment l'histoire et les bistrots.
 \end_layout
 
@@ -1601,7 +1601,7 @@ Bien le bonjour, chères lectrices et chers lecteurs.
  Quel jour est-il, allez-vous bien et fait-il beau ? En attendant vos réponses
  et vos nouvelles, que nous apportera le doux vent de ce printemps ligérien,
  apprêtez-vous à recevoir les nôtres, de nouvelles.
- Je vous écris un vendredi – celui du 20
+ Je vous écris un vendredi -- celui du 20
 \begin_inset space ~
 \end_inset
 
@@ -1609,7 +1609,7 @@ mai
 \begin_inset space ~
 \end_inset
 
-2011 – l'oreille tendue, écoutant le bourdonnement d'un train.
+2011 -- l'oreille tendue, écoutant le bourdonnement d'un train.
  Que la ligne Angers-Nantes est passante ; nos bivouacs et nos siestes en
  sont témoins.
  M'enfin, ces bruits de métaux se frottant à vive allure sont plutôt paisibles,
@@ -1625,14 +1625,14 @@ Où en étions-nous ? Quelqu'un qui suit ? Nous en étions tout juste à Amboise
 \begin_inset space ~
 \end_inset
 
-mai – au lendemain duquel je vous ai laissé – fût un n\SpecialChar \nobreakdash-
+mai -- au lendemain duquel je vous ai laissé -- fût un n\SpecialChar \nobreakdash-
 ième jour de repos.
  Nos godillots ont marqué la jolie ville touristique d'Amboise.
  Nos esprits et nos imaginations y ont exquisément vagabondé : au Clos
 \begin_inset space ~
 \end_inset
 
-Lucé – dernière demeure de feu le brillant Léonard
+Lucé -- dernière demeure de feu le brillant Léonard
 \begin_inset space ~
 \end_inset
 
@@ -1640,7 +1640,7 @@ de
 \begin_inset space ~
 \end_inset
 
-Vinci – et à la médiathèque – repère à journaux et à BD.
+Vinci -- et à la médiathèque -- repère à journaux et à BD.
  Puis, les coups de pagaies se sont de nouveau déroulés ; nos bras forts
  et habitués s'en délassant.
 \end_layout
@@ -1648,7 +1648,7 @@ Vinci – et à la médiathèque – repère à journaux et à BD.
 \begin_layout Standard
 Vu d'une carte ou vu du ciel : après Amboise, il y a Tours ; après Tours,
  Angers ; après Angers, Nantes ; et enfin, l'estuaire de Loire.
- Vu d'en dessous – à fleur d'eau, au ras des vaguelettes – c'est amplement
+ Vu d'en dessous -- à fleur d'eau, au ras des vaguelettes -- c'est amplement
  plus subtil, bouillonnant, diversifié.
  Et ardu à écrire.
  Nous n'avons pas pu tout goûter, tout sentir, tout apprécier à sa juste
@@ -1726,7 +1726,7 @@ Nazaire, où habitent
  mes chers parents.
  Encore une fois, je ne vous épargne pas, avec ce bond dans le temps et
  dans l'espace.
- Cela fait une semaine – déjà – que notre aventure ligérienne s'est terminée.
+ Cela fait une semaine -- déjà -- que notre aventure ligérienne s'est terminée.
  Une semaine que nous nous reposons, Marie, moi, nos muscles, nos tendons,
  nos nerfs et nos têtes.
  Car, à la fin des fins, tout dans nos corps a fini pas être grippé, crispé
@@ -1739,8 +1739,8 @@ Nazaire, où habitent
 Nous avons passé Amboise le 13, Tours le 14 et Saumur le 16.
  Les 17 et 18, nous étions aux abords d'Angers.
  Et les 20 et 21, nous étions à Nantes et sa périphérie.
- Nous y avons rencontré, dans cette ultime portion de Loire, – pour une
- heure, une après-midi ou une nuit – des amis et nos familles, certains
+ Nous y avons rencontré, dans cette ultime portion de Loire, -- pour une
+ heure, une après-midi ou une nuit -- des amis et nos familles, certains
  pas vus depuis des années.
  Nos incursions, dans cette humanité connue, ont été franchement plaisantes.
  Mais les retours à la nature, à l'isolement humain, au vagabondage solitaire
@@ -1759,7 +1759,7 @@ extravagances
 
 \begin_layout Standard
 Jusqu'à Nantes, les paysages ne se sont pas bouleversés et étaient formés
- – toujours – des mêmes briques élémentaires : les plages de sables, les
+ -- toujours -- des mêmes briques élémentaires : les plages de sables, les
  arbres bordant le fleuve, peu de remous, un niveau d'eau bas, un ciel très
  bleu un jour, très nuageux l'autre, mi-figue mi-raisin le troisième.
  Des merveilles à contempler du lever au coucher.
@@ -1770,8 +1770,8 @@ Jusqu'à Nantes, les paysages ne se sont pas bouleversés et étaient formés
 À partir d'Amboise ou Tours, doucement, la Loire s'est endiguée et a grossi
  en méandres, devenant en certains endroits un véritable labyrinthe d'eau,
  de sable et de pierres.
- Notre fil d'Ariane était alors un chapelet de bouées – rouges et vertes
- – que nous suivions rigoureusement, pour ne pas nous perdre, ni nous ensabler.
+ Notre fil d'Ariane était alors un chapelet de bouées -- rouges et vertes
+ -- que nous suivions rigoureusement, pour ne pas nous perdre, ni nous ensabler.
  Ces méandres, ce labyrinthe et ces digues forment des paysages si tranquilles
  et si beaux.
  Ils sont en France, à notre porte.
@@ -1805,8 +1805,8 @@ Mais poursuivons.
  subtilement.
  Ce fût tout un mélange : d'abord le sable, les digues, les méandres, le
  fort vent d'ouest et avec lui, les ciels nuageux ; puis les bateaux de
- pêche ou à voile, et les oiseaux marins par centaines ; enfin – et avec
- une marée de plus en plus puissante – la vase, les roselières et quelques
+ pêche ou à voile, et les oiseaux marins par centaines ; enfin -- et avec
+ une marée de plus en plus puissante -- la vase, les roselières et quelques
  échasses blanches.
  Nous rêvions en pagayant ; et pagayions pour continuer le rêve.
  Marie pensait au passé, de cette Loire et de ses hommes qui l'ont animée,
@@ -1820,7 +1820,7 @@ Mais poursuivons.
 
 \begin_layout Standard
 Les jours filèrent encore ; puis le réveil sonna.
- Nos rêves s'éclipsèrent et Nantes – notre belle Nantes – apparut, nous
+ Nos rêves s'éclipsèrent et Nantes -- notre belle Nantes -- apparut, nous
  ouvrant ses ponts et son île, et nous amenant en son sein, aidée par une
  marée complice.
  C'était le samedi 21
@@ -1858,11 +1858,11 @@ Le dimanche 22
 \begin_inset space ~
 \end_inset
 
-mai – au bout de 49
+mai -- au bout de 49
 \begin_inset space ~
 \end_inset
 
-jours durs et merveilleux – la fin de notre excursion s'éveilla.
+jours durs et merveilleux -- la fin de notre excursion s'éveilla.
  Il était 9
 \begin_inset space \thinspace{}
 \end_inset
@@ -1941,11 +1941,11 @@ h
 \begin_inset space \thinspace{}
 \end_inset
 
-30 lorsque notre kayak – la robuste 
+30 lorsque notre kayak -- la robuste 
 \emph on
 Louizanne
 \emph default
- – toucha l'eau salée vaseuse.
+ -- toucha l'eau salée vaseuse.
  9
 \begin_inset space \thinspace{}
 \end_inset
@@ -1975,8 +1975,8 @@ Un paysage bouleversant s'anima alors tout azimut.
 
 \begin_layout Standard
 Le fleuve s'était amplement élargi, doublant ou triplant sa corpulence.
- Et les rives – extravagantes compositions de roseaux, de gravas et de prés
- humides – formaient deux haies d'honneur, comme pour nous accueillir.
+ Et les rives -- extravagantes compositions de roseaux, de gravas et de
+ prés humides -- formaient deux haies d'honneur, comme pour nous accueillir.
  Alors, entre ces rives et au cœur de cette Loire large et agitée, trempés
  par un rideau d'une fine pluie, ballotés par les vagues et leurs creux
  d'un mètre parfois, dans une exaltation, une transe, une panique et une
@@ -2038,7 +2038,7 @@ Hier, nous fûmes, de nouveau, face à l'un de ces vieux ponts.
  avions lu à son sujet.
  Le parcourant de long en large, nous y cherchâmes une issue : la moins
  crispante pour nous, la moins douloureuse pour notre embarcation.
- Nous avions convenu – tout de même – que, en toute sérénité, nous ferions
+ Nous avions convenu -- tout de même -- que, en toute sérénité, nous ferions
  un portage à cet endroit, à ce Wilson trop dangereux pour notre coque de
  bois.
  Mais moi, mué par un vilain orgueil, j'imaginai tout de même la passer,
@@ -2092,7 +2092,7 @@ guerrier
 \begin_layout Standard
 Le pont passé, nous continuâmes notre chemin, cahin-caha, entre eaux et
  bancs de sable.
- Puis apparut – comme prévu sur notre carnet de route – un second vieux
+ Puis apparut -- comme prévu sur notre carnet de route -- un second vieux
  pont, doublé d'un autre (récent).
  À priori, pas d'ennui ici.
  Mais l'autre con de Wilson, là-bas, nous avait ramolli.
@@ -2293,8 +2293,8 @@ hors de question de repartir de cette lourde manière
 \end_inset
 
 .
- Olivier – comme un Jésus – nous présenta un état d'esprit allant dans ce
- sens : la MUL pour 
+ Olivier -- comme un Jésus -- nous présenta un état d'esprit allant dans
+ ce sens : la MUL pour 
 \begin_inset Quotes fld
 \end_inset
 
@@ -2453,7 +2453,7 @@ Nature
 Ainsi, nous avons pu : admirer les hérons cendrés, pourprés et gardes bœufs
  en marais et en étangs ; bougonner contre les élevages intensifs de poulets,
  de pommes et d'humains (dans leurs lotissements maussades) ; accompagner
- – à contre courant – la Loire et nombre de ses veines, nous y plongeant
+ -- à contre courant -- la Loire et nombre de ses veines, nous y plongeant
  parfois ; nous étonner du nombre de demeures bourgeoises angevines, admirant
  quelques unes majestueuses ; et subir les caprices d'une météo ci-douce,
  là-lourde, ci-pluvieuse et là-torride.
@@ -2532,7 +2532,7 @@ Puis, reposés, nous nous sommes lancés dans la seconde longueur, joyeux
 \end_layout
 
 \begin_layout Standard
-Le premier démon qui se montra à nous – petit et éphémère – fût l'outil
+Le premier démon qui se montra à nous -- petit et éphémère -- fût l'outil
  même de notre voyage : la marche.
  Cette marche est plus impliquante, pour le corps et l'esprit, que ne le
  furent mille coups de pagaie sur un kayak.
@@ -2542,8 +2542,8 @@ Le premier démon qui se montra à nous – petit et éphémère – fût l'outi
 \end_layout
 
 \begin_layout Standard
-Le second à apparaître – global et immuable – fût le genre humain dans toute
- sa bêtise, son avidité, sa domination, son orgueil.
+Le second à apparaître -- global et immuable -- fût le genre humain dans
+ toute sa bêtise, son avidité, sa domination, son orgueil.
  Ce démon là semble omniprésent et se tient à de solides fondations.
  Nous avons pourtant convenu de ne jamais le laisser nous abattre mais,
  au contraire, d'en faire le combat militant d'une vie.
@@ -2830,9 +2830,9 @@ Le concombre nous maudit ! Que dis-je ? Ce sont les concombres, par tonnes,
  qui nous maudissent.
  Nous autres, couillons d'hommes, qui nous gavons des produits (souvent
  dégueulasses) de supermarchés et qui sommes promptes, tout d'un coup, à
- en dédaigner certains ! Comme le concombre – qu'il soit d'Espagne, de France
- et même du producteur du coin – parce que le couillon d'homme aura pris
- le JT pour une messe, et aura confondu 
+ en dédaigner certains ! Comme le concombre -- qu'il soit d'Espagne, de
+ France et même du producteur du coin -- parce que le couillon d'homme aura
+ pris le JT pour une messe, et aura confondu 
 \begin_inset Quotes fld
 \end_inset
 
@@ -2849,11 +2849,11 @@ oracle
 \end_inset
 
 .
- Nous avons abandonné un légume – produit simple et non transformé – alors
- que la plupart d'entre nous mangeons de la merde – hyper transformée, grasse,
- saturée en sel...
- – faisant confiance à l'industrie agroalimentaire, où se créent et se condition
-nent de vastes supercheries.
+ Nous avons abandonné un légume -- produit simple et non transformé -- alors
+ que la plupart d'entre nous mangeons de la merde -- hyper transformée,
+ grasse, saturée en sel...
+ -- faisant confiance à l'industrie agroalimentaire, où se créent et se
+ conditionnent de vastes supercheries.
 \end_layout
 
 \begin_layout Standard
@@ -2869,7 +2869,7 @@ Atlantique, nous sommes
 \end_layout
 
 \begin_layout Standard
-Cette bêtise collective et ce massacre de masse ont permis – au moins –
+Cette bêtise collective et ce massacre de masse ont permis -- au moins --
  de nous faire découvrir ce légume (il est plein d'eau et facile à ranger
  dans un sac à dos).
  L'hystérie culinaire de ce mois de juin apprendra à l'homme occidental,
