Add the text : Le lièvre et l'orage

--- a/main.lyx
+++ b/main.lyx
@@ -2907,5 +2907,180 @@ miramap.org
  potager ou un potager collectif.
 \end_layout
 
+\begin_layout Section*
+Le lièvre et l'orage
+\end_layout
+
+\begin_layout Standard
+Le 21
+\begin_inset script superscript
+
+\begin_layout Plain Layout
+e
+\end_layout
+
+\end_inset
+
+ kilomètre s'achevait, d'une journée chaude et lourde qui devait se terminer
+ -- disait-on -- par un orage carabiné.
+ Après une semaine d'un sale temps -- venteux, gris et pluvieux -- à crapahuter
+ sur les coteaux d'Anjou, nous arrivâmes en Touraine abrutis par un soleil
+ cuisant, et un air chaud et poisseux.
+ Un contraste météorologique dont les deux composantes n'étaient pas plus
+ enviables l'une que l'autre.
+ Pourtant et malgré cela, ces deux régions sont superbes et leurs traversées
+ nous fût sympathique.
+\end_layout
+
+\begin_layout Standard
+Le 21
+\begin_inset script superscript
+
+\begin_layout Plain Layout
+e
+\end_layout
+
+\end_inset
+
+ kilomètre, donc.
+ Fondant sous le soleil et étouffant sous la chaleur -- malgré l'heure avancée,
+ 19
+\begin_inset space \thinspace{}
+\end_inset
+
+h
+\begin_inset space \thinspace{}
+\end_inset
+
+30 -- nous nous arrêtâmes sur le sol dur d'un champ de blé, fraîchement
+ coupé et emballé, à cinq kilomètres environ d'Azay\SpecialChar \nobreakdash-
+le\SpecialChar \nobreakdash-
+Rideau.
+ Comme voisins de pension campagnarde, nous avions, ce soir là, un couple
+ de faisans et une famille de gros lièvres (gambadeurs et à peine farouches).
+ Les salutations faites, la tente piquée et le plat de nouilles mollement
+ avalé, nous nous mîmes au lit, à la faveur d'une douce fraîcheur de fin
+ de soirée.
+ Tout semblait paisible sous le grandiose coucher de soleil, qui peignait
+ les rares nuages filamenteux, d'un chaleureux orange.
+ 
+\begin_inset Quotes fld
+\end_inset
+
+Ronron...
+ ronron...
+\begin_inset Quotes frd
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset VSpace medskip
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+Soudain, à deux heures de la nuit : 
+\begin_inset Quotes fld
+\end_inset
+
+Il pleut, il pleut
+\begin_inset Quotes frd
+\end_inset
+
+ s'efforça d'articuler Marie, gueulant avec la nette intention de réveiller
+ tout le quartier.
+\end_layout
+
+\begin_layout Standard
+Ni une ni deux, son prince charmant fût debout pour constater que, non,
+ il ne pleuvait pas la moindre goutte d'eau.
+ Quelle cinglée cette princesse dormante ! Pourtant, elle dût avoir une
+ intuition somnambule ou faire un rêve prémonitoire.
+ Car dehors flambaient, à intervalles réguliers, des boules colorées-foncées,
+ jaunâtres et orangées.
+ Un orage.
+ Un putain d'orage !
+\end_layout
+
+\begin_layout Standard
+Ni une ni deux -- encore -- le prince se mit sur son séant, bottant celui
+ de la princesse ; et tous deux sortirent de leur château de toile de deux
+ mètres carrés.
+ Enfourchant leurs sandales, ils coururent vers deux bottes de paille, sur
+ l'une desquelles le prince grimpa.
+ Et là, sur le champ de blé coupé -- légèrement en hauteur et avec, ouest-nord-o
+uest, un panorama très ouvert --, ils contemplèrent, de leurs yeux boursoufflés
+ et endormis, un des plus beaux orages que le bon Dieu leur ait donné à
+ voir.
+\end_layout
+
+\begin_layout Standard
+Au loin, le ciel était couvert d'une grande nappe de nuages d'où pleuvait
+ -- de part en part -- des filaments crispés, étincelants de jaunes et d'oranges.
+ Tout ceci formait un spectacle grandiose, à la dynamique envoûtante mais
+ à la frénésie quelque peu inquiétante.
+ Un spectacle de sons et lumières ; sans les sons, car trop lointains.
+ Un spectacle qui, bien qu'au delà de la Loire et de ses rivières, semblait
+ s'approcher très vite, poussé par un vent puissant et chaud qui leur arrivait
+ en pleines gueules et faisait frissonner leurs petits petons à l'air.
+ Les flashs brillèrent plus proches et quelques bombardements semblèrent
+ se faire entendre.
+\end_layout
+
+\begin_layout Standard
+Alors, tout preux prince et princesse qu'ils étaient, ils prirent peur,
+ voyant cette masse pétaradante se rapprocher, qui finirait bien par leur
+ tomber dessus.
+ Leur sortie héroïque dura quelques minutes -- dix, peut-être.
+ Puis ils s'en retournèrent, allant attendre ce monstre, cracheur d'éclairs,
+ à l'abri de leur petite forteresse.
+\end_layout
+
+\begin_layout Standard
+Une minute passa, puis deux, puis trois.
+ Et, dans l'appréhension du premier coup de tonnerre, se demandant s'ils
+ auraient du mettre des pommes de terre sur les sardines de leur tente (mais
+ ils n'avaient pas de pommes de terre), espérant qu'ils ne risquaient rien
+ sur ce champ de blé coupé un peu en hauteur, ils s'endormirent.
+ 
+\begin_inset Quotes fld
+\end_inset
+
+Ronron...
+ ronron...
+\begin_inset Quotes frd
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset VSpace medskip
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+À notre réveil, à 6
+\begin_inset space \thinspace{}
+\end_inset
+
+h
+\begin_inset space \thinspace{}
+\end_inset
+
+30, le ciel était bleu, ouest-nord-ouest.
+ Et, est-nord-est, une grande nappe de nuages -- grise et orangée -- filait,
+ nous montrant son cul avec dédain.
+ L'orage était passé, restant au nord du fleuve et de toute la zone de rivières.
+ Il nous avait posé un lapin.
+ Et la légende dit que même les lièvres ne s'en sont pas remis.
+\end_layout
+
 \end_body
 \end_document
