Add the text : Rencontres sauvages

--- a/main.lyx
+++ b/main.lyx
@@ -3082,5 +3082,98 @@ h
  Et la légende dit que même les lièvres ne s'en sont pas remis.
 \end_layout
 
+\begin_layout Section*
+Rencontres sauvages
+\end_layout
+
+\begin_layout Standard
+Voyager sous le statut de 
+\begin_inset Quotes fld
+\end_inset
+
+marcheur-bivouaqueur
+\begin_inset Quotes frd
+\end_inset
+
+ ouvre des portes, fermées sinon.
+\end_layout
+
+\begin_layout Standard
+Depuis un mois, nous parcourons la campagne française et sa mosaïque de
+ paysages : champs cultivés de blé, maïs, vignes...
+ ; champs au repos, parfois parsemés de bottes de paille ; marais ; étangs
+ ; massifs forestiers et leurs lisières.
+ Cette campagne est le lieu de vie de nombreuses espèces 
+\begin_inset Quotes fld
+\end_inset
+
+sauvages
+\begin_inset Quotes frd
+\end_inset
+
+, qui ne se laissent pas facilement observées, même de loin.
+ Nos sites de bivouac, bien souvent à l'écart de l'homme (par exemple, des
+ champs proches de bosquets ou sous-bois), sont des postes avancés pour
+ l'observation de ces 
+\begin_inset Quotes fld
+\end_inset
+
+coloca-Terre
+\begin_inset Quotes frd
+\end_inset
+
+.
+ Alors, nous nous attendions à ces rencontres, au moins un peu.
+ Pourtant, chacune d'elles nous a paralysé et émerveillé.
+ Nous nous sentions comme pris en faute, assistant à une scène qui ne nous
+ était pas destinée.
+ L'étonnement passé, nous voulions en voir plus, plus longtemps et, surtout,
+ que ces animaux ne s'enfuient pas trop vite.
+\end_layout
+
+\begin_layout Standard
+Ce fut le cas un soir, entre vignes et forêts, où un festival s'est offert
+ à nous.
+ Trois copains blaireaux sont passés, puis repassés, à 10
+\begin_inset space ~
+\end_inset
+
+mètres devant nos yeux et nos godets de soupe.
+ Puis, ce sont deux biches solitaires et farouches qui sont apparues, sautillant
+ dans un champ de blé voisin.
+ Le bouquet final, à 30
+\begin_inset space ~
+\end_inset
+
+mètres, fut une famille sanglier (la mère et ses quatre marcassins) gambadant
+ dans ce même champ.
+\end_layout
+
+\begin_layout Standard
+Un autre matin, alors que nous dégustions le café, ce sont deux chevreuils,
+ déboulant d'un chemin forestier, qui ont changé de cap à notre vue.
+ Nombreuses aussi furent les biches -- avec ou sans leur progéniture --,
+ flânant dans les champs, qui bondissaient rapidement se sentant observées.
+ L'observation d'oiseaux, un soir au bord d'un étang, nous a permis de contemple
+r deux jeunes cerfs fraîchement boisés, venant peut-être se désaltérer.
+ Un autre de nos campements fut le terrain de jeu de nombreux lièvres et
+ d'un couple de faisans.
+\end_layout
+
+\begin_layout Standard
+Ces rencontres furent les plus marquantes, mais il y en eu bien d'autres
+ : tous ces oiseaux, posés dans un champ ou virevoltant à notre passage
+ ; ces grenouilles, batifolant dans les étangs ou traversant les chemins
+ ; ces criquets ; ces papillons de nuit ou de jour ; ces araignées ; et
+ ces nombreux insectes aux noms inconnus.
+\end_layout
+
+\begin_layout Standard
+Tous font partie de cette faune sauvage que nous essayons d'observer, en
+ impactant le moins possible leurs environnements.
+ Mais -- et nous le constatons trop souvent -- celui-ci semble fondre comme
+ une glace à l'eau au soleil.
+\end_layout
+
 \end_body
 \end_document
