Text "Filent l'eau, le sable, la vie" : little correction about the "trait bleu".

--- a/main.lyx
+++ b/main.lyx
@@ -1532,8 +1532,8 @@ ent ! Nous voilà, maintenant, sur une partie aisément navigable, à l'exceptio
 \end_layout
 
 \begin_layout Standard
-Je regarde, avec recul, la carte du parcours et deux sentiments s'affrontent
- en moi (qui a dit 
+Je regarde, sur la carte, le trait du chemin parcouru et deux sentiments
+ s'affrontent en moi (qui a dit 
 \begin_inset Quotes fld
 \end_inset
 
@@ -1542,7 +1542,7 @@ schizophrène
 \end_inset
 
  ?).
- Le premier est la volonté d'avancer : pour voir ce trait bleu grandir encore
+ Le premier est la volonté d'avancer : pour voir ce trait grandir encore
  ; découvrir ces villes au nom familier, puisque longuement étudiées pendant
  la préparation ; enfin, arriver dans notre région et nous dire 
 \begin_inset Quotes fld
