Text "Rencontres sauvages" : correction of the last §

--- a/main.lyx
+++ b/main.lyx
@@ -3171,8 +3171,8 @@ Ces rencontres furent les plus marquantes, mais il y en eu bien d'autres
 \begin_layout Standard
 Tous font partie de cette faune sauvage que nous essayons d'observer, en
  impactant le moins possible leurs environnements.
- Mais -- et nous le constatons trop souvent -- celui-ci semble fondre comme
- une glace à l'eau au soleil.
+ Mais -- et nous le constatons trop souvent -- ceux-ci semblent se dégrader
+ comme fond une glace au soleil.
 \end_layout
 
 \end_body
