Add the text : Nos chemins de liberté

--- a/main.lyx
+++ b/main.lyx
@@ -3175,5 +3175,286 @@ Tous font partie de cette faune sauvage que nous essayons d'observer, en
  comme fond une glace au soleil.
 \end_layout
 
+\begin_layout Chapter*
+Chapitre 2
+\end_layout
+
+\begin_layout Section*
+Nos chemins de liberté
+\end_layout
+
+\begin_layout Standard
+Il faut bien le dire : être deux randonneurs parcourant un 
+\begin_inset Quotes fld
+\end_inset
+
+chemin de Saint\SpecialChar \nobreakdash-
+Jacques
+\begin_inset Quotes frd
+\end_inset
+
+ ne nous a jamais trop émoustillés, Marie et moi.
+ Dès le début de cette grande marche, nous nous efforcions -- d'ailleurs
+ -- d'expulser les pèlerins qui étaient en nous, tachant d'offrir aux rencontres
+ passagères l'image de simples vagabonds.
+ Nous disions, à cette fin : que nos affaires avaient commencé sur un kayak,
+ il y a deux mois alors, et qu'elles nous mèneraient, à pieds, au bout de
+ l'Espagne ; que nous allions lentement, au gré des paysages, au gré des
+ rencontres, au gré des battements de nos cœurs ; que le but n'était qu'un
+ prétexte ; et que c'était la déambulation qui nous faisait vivre.
+ Notre mayonnaise verbale ne prenait pas souvent ; on ne s'improvise pas
+ cuisinier !
+\end_layout
+
+\begin_layout Standard
+Pourtant, en passant les gorges de la Creuse
+\begin_inset Foot
+status collapsed
+
+\begin_layout Plain Layout
+Les 12 et 13 juillet 2011.
+\end_layout
+
+\end_inset
+
+, entre Gargilesse et Crozant, le doute n'était plus de mise.
+ Nous étions, bel et bien, deux pèlerins sur un 
+\begin_inset Quotes fld
+\end_inset
+
+chemin de Saint\SpecialChar \nobreakdash-
+Jacques
+\begin_inset Quotes frd
+\end_inset
+
+.
+ Un point et c'était tout ! Divers publicités et symboles jacquaires --
+ collés ou cloutés un peu partout -- nous le rappelaient bien assez, tandis
+ que les autochtones et les 
+\begin_inset Quotes fld
+\end_inset
+
+anciens combattants
+\begin_inset Quotes frd
+\end_inset
+
+ -- sans paroles ni gestes de notre part -- nous faisaient savoir qu'ils
+ savaient ce que renfermaient nos âmes.
+ Même l'alcoolique du coin nous débitait, au quart de tour, notre destination
+ et nos raisons.
+ Et au sortir d'un bar, un ecclésiastique s'empressait de vouloir nous tamponner
+ une belle coquille, on ne sait où.
+ Que nous marchions sous une douce pinède ou sur un humide humus forestier,
+ que nous traversions de mignonnets vieux villages médiévaux ou quelques
+ rivières asséchées, putain, qu'il était frustrant d'être vagabonds en ces
+ lieux.
+ Ce n'était pourtant pas l'endroit qui manquait de charmes.
+ Mais sur ces chemins, nous nous sentions comme deux canards en plastique,
+ peints d'une coquille Saint-Jacques, qui filaient lentement sur un filet
+ d'eau canalisé.
+\end_layout
+
+\begin_layout Standard
+
+\emph on
+Ultreïa
+\emph default
+
+\begin_inset Foot
+status collapsed
+
+\begin_layout Plain Layout
+Salut de ralliement des pèlerins de Saint-Jacques-de-Compostelle.
+\end_layout
+
+\end_inset
+
+, mes amis.
+\end_layout
+
+\begin_layout Standard
+Les 
+\begin_inset Quotes fld
+\end_inset
+
+chemins de Saint\SpecialChar \nobreakdash-
+Jacques\SpecialChar \nobreakdash-
+de\SpecialChar \nobreakdash-
+Compostelle
+\begin_inset Quotes frd
+\end_inset
+
+ sont sortis de l'histoire en une mode, une lourde institution codifiée
+ aux mœurs étriquées, prisonniers inévitables d'une froide mécanique.
+\end_layout
+
+\begin_layout Standard
+De nos jours, au pèlerin passionné s'est ajouté un millier d'autres zigues
+ : sportifs pressés, quinquagénaires en crise, vacanciers curieux, voyageurs
+ peureux, etc.
+ Et tous se suivent, se passent et se dépassent, se mêlent et se démêlent,
+ discutant, échangeant, riant et formant -- en somme -- un joyeux ballet.
+ D'aucun reconnaitrait que ces chemins là ont le vent en poupe, qu'ils constitue
+nt un creuset formidable de rencontres simples et chaleureuses, et qu'une
+ odeur d'humanisme y règne.
+ Mais, immergez-vous y un tant soit peu, écoutez ses riverains et ses commerçant
+s, regardez les processions de ces néo-pèlerins et, peut-être, sentirez-vous
+ comme un air de pourri y flotter.
+ Peut-être, jugerez-vous que le néo-pèlerin, sa muse et son exploit ont
+ pris le dessus sur la déambulation et la contemplation.
+\end_layout
+
+\begin_layout Standard
+Ce jugement devint rapidement le nôtre.
+ Mais la Terre est vaste et ses chemins nombreux ; suffisamment pour que
+ tous les goûts s'épanouissent.
+\end_layout
+
+\begin_layout Standard
+\begin_inset VSpace medskip
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+Parfois, au gré des kilomètres et de quelques rencontres, émergent -- pouf,
+ comme ça -- du nouveau, des envies, des rêves, de la folie.
+\end_layout
+
+\begin_layout Standard
+Trois semaines auparavant
+\begin_inset Foot
+status collapsed
+
+\begin_layout Plain Layout
+Le 22 juin 2011.
+\end_layout
+
+\end_inset
+
+, sur les bords de Loire, dans les faubourgs de Saumur -- ville de bulles
+ et de chevaux --, un joyeux trublion nous offrit cette folie.
+\end_layout
+
+\begin_layout Standard
+Francis.
+ Il a 67
+\begin_inset space ~
+\end_inset
+
+ans et des moustaches ; des mollets et un cœur gros comme la liberté ; l'ivresse
+ du libertaire et l'âme du voyageur.
+ Et il crapahute, toujours, sur sa lourde bicyclette.
+ Des souvenirs pleins la tête et du pinard dans les sacoches, Francis, c'est
+ du genre à vous faire oublier la connerie humaine.
+\end_layout
+
+\begin_layout Standard
+Je crois que mon tableau est clair : ce petit homme nous a fait rire et
+ nous a plu.
+ La rencontre fut brève -- le temps d'un dîner et d'un petit-déj -- mais
+ qu'elle fut joyeuse et intense -- presque autant que ses ronflements d'une
+ nuit.
+ Le bougre eu tôt fait de reprendre sa route zigzag et de se trouver une
+ belle place dans nos têtes.
+\end_layout
+
+\begin_layout Standard
+\begin_inset VSpace medskip
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+Sur les routes de Creuse, la morosité gangrénait nos cœurs et quelques coquilles
+ nous cassaient les noix de Saint\SpecialChar \nobreakdash-
+Jacques.
+ D'un côté, il y avait ce foutu jugement : que ces chemins là n'étaient
+ pas pour nous.
+ De l'autre, il y avait notre programme, préparé longuement et consciencieusemen
+t par Marie : arrivée à Saint\SpecialChar \nobreakdash-
+Jacques\SpecialChar \nobreakdash-
+de\SpecialChar \nobreakdash-
+Compostelle par ses chemins officiels.
+ Quelle collision !
+\end_layout
+
+\begin_layout Standard
+Mais le bon Francis, son souvenir et sa moustache eurent le bon goût de
+ sortir de leur trou, de crier à la liberté et de foutre en l'air notre
+ itinéraire tout tracé.
+ C'était décidé, nos pas iraient jusqu'à Francis ; ils iraient à Nice !
+\end_layout
+
+\begin_layout Standard
+\begin_inset VSpace medskip
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+Un autre mois, plus dix jours.
+ Les marcheurs tiennent la route !
+\end_layout
+
+\begin_layout Standard
+Celle qui passe dans la clarté bleu-vert de la Brenne.
+ Les marcheurs s'arrêtent au pied d'un étang et, cachés derrière un mur
+ de roseaux, espionnent un blongios nain et une tortue cistude.
+ Le soleil se couche alors, rougeoyant dans les airs et sur les eaux.
+ Son dernier rayon s'imprime sur l'iris des marcheurs, qui s'endorment,
+ bercés par les piaillements des oiseaux.
+\end_layout
+
+\begin_layout Standard
+Celle qui chemine dans les verts, oranges et gris des gorges de la Creuse.
+ Au bord d'une vaste étendue d'eau, aux côtés de touristes en goguette,
+ les marcheurs se reposent à l'abri du soleil et de ses chaleurs.
+ Ils vont -- à intervalles réguliers -- tremper leurs fesses et leurs pieds,
+ jusqu'à ce que la nuit les prenne et que l'orage berce leurs rêves.
+\end_layout
+
+\begin_layout Standard
+Celle qui traine sur les grandeurs vertes et piquantes de la Creuse, et
+ qui empreinte ses escarpements terreux.
+ Au cœur des résineux, les marcheurs s'asseyent sur le bois pourrissant
+ ; et ils méditent, éclairés par une faible lumière orangée.
+ Une fine pluie tombe de nouveau, transperçant leur mince protection forestière,
+ et les réveille.
+ Ils reprennent alors le chemin, en quête d'un lopin de terre ouvert, humanisé,
+ sur lequel ils poseront leur toit de fortune.
+ Avec quelque chance, des mousses d'arbres vert-fluorescent les guideront
+ et deux ou trois chevreuils leur feront le spectacle.
+\end_layout
+
+\begin_layout Standard
+Celle qui accompagne les monts d'Auvergne, les grimpe et les descend, longe
+ ses crêtes et traverse de vastes plateaux.
+ Les marcheurs fatiguent sur l'humus et la rocaille, mais s'y soûlent de
+ contemplations panoramiques et d'excentriques rencontres.
+\end_layout
+
+\begin_layout Standard
+Ils se savent tout petits face à 
+\begin_inset Quotes fld
+\end_inset
+
+ce là
+\begin_inset Quotes frd
+\end_inset
+
+, mais forts d'y être arrivés sac au dos.
+ Toujours, ils font l'amour avec les paysages, et recherchent le bon voisinage
+ des vaches et des moutons.
+ Aux côtés d'un soleil qui tient le premier et le plus beau rôle, ils se
+ laissent engloutir par une intense liberté, presque totale, presque gênante
+ aussi.
+ Alors, en l'air sur la montagne, les marcheurs s'endorment en ronflant,
+ tandis que les chamois cabriolent.
+\end_layout
+
 \end_body
 \end_document
