Correction of agreements of the verb "Avoir"

--- a/main.lyx
+++ b/main.lyx
@@ -954,10 +954,10 @@ Mais, non ! La Loire n'est pas un fleuve sauvage.
 \end_layout
 
 \begin_layout Standard
-La croyance individuelle, que ce périple a largement lessivé, est la suivante.
+La croyance individuelle, que ce périple a largement lessivée, est la suivante.
  De la Loire, Marie et moi ne connaissions que l'estuaire et l'embouchure,
  près desquels nous avons fait pousser nos vingts premières années.
- Tout au plus, nous l'avions aperçu en quelques autres endroits -- de villes
+ Tout au plus, nous l'avions aperçue en quelques autres endroits -- de villes
  ou de châteaux -- où elle était, probablement, déjà bien large.
  Bien entendu, nous avions préparé ce voyage et savions -- tout de même
  -- dans quelle bassine d'eau nous mettions les pieds.
@@ -1007,9 +1007,9 @@ Tout le reste, il faut aussi en parler et l'écrire.
  Ce sont les longues journées à tirer un kayak, dans les cinq centimètres
  d'eau, du plus long fleuve de France ! C'est l'unique orage, le seul jour
  de pluie, d'un mois de baroude d'avril.
- C'est la multitude de piafs majestueux, que nous avons observé et écouté,
+ C'est la multitude de piafs majestueux que nous avons observés et écoutés,
  avec un énorme plaisir.
- C'est la flore, aussi, que nous avons étudié, avec un sérieux scientifique.
+ C'est la flore, aussi, que nous avons étudiée, avec un sérieux scientifique.
 \end_layout
 
 \begin_layout Standard
@@ -1067,8 +1067,8 @@ Cela fait deux semaines que nous bivouaquons; nous dormons sous une tente
 \end_layout
 
 \begin_layout Standard
-Ce midi, un homme généreux, rencontré le matin même, nous a invité au restaurant
- ; un chic, où les petits plats sont mis dans les grands.
+Ce midi, un homme généreux, rencontré le matin même, nous a invités au restauran
+t ; un chic, où les petits plats sont mis dans les grands.
  Le contraste, entre ce repas et nos vies de voyageurs, a été fort.
  Passer de la plâtrée de riz avec saucisson, à la farandole de hors-d’œuvres,
  paraît hallucinant ! Nos tenues, aussi, étaient surprenantes dans un tel
@@ -1186,7 +1186,7 @@ Réveil un peu frais, mais pas trop.
 \end_inset
 
 heures.
- L'astre jaune ne nous a pas attendu pour se lever, réchauffant les cœurs
+ L'astre jaune ne nous a pas attendus pour se lever, réchauffant les cœurs
  et le paysage.
  Cela fait 33
 \begin_inset space ~
@@ -1625,7 +1625,7 @@ Où en étions-nous ? Quelqu'un qui suit ? Nous en étions tout juste à Amboise
 \begin_inset space ~
 \end_inset
 
-mai -- au lendemain duquel je vous ai laissé -- fût un n\SpecialChar \nobreakdash-
+mai -- au lendemain duquel je vous ai laissés -- fût un n\SpecialChar \nobreakdash-
 ième jour de repos.
  Nos godillots ont marqué la jolie ville touristique d'Amboise.
  Nos esprits et nos imaginations y ont exquisément vagabondé : au Clos
@@ -1995,7 +1995,7 @@ Louizanne
 sur\SpecialChar \nobreakdash-
 Loi
 re s'approcha.
- Pourtant, la marée avait si bien baissée que nous ne trouvâmes pas tout
+ Pourtant, la marée avait si bien baissé que nous ne trouvâmes pas tout
  de suite l'entrée du port, cachée qu'elle était par des amas de vase.
  Cet ultime bout de Loire s'éternisa alors, titillant nos nerfs et la patiente
  de nos familles.
@@ -2035,7 +2035,7 @@ Hier, nous fûmes, de nouveau, face à l'un de ces vieux ponts.
  Le plus redouté, le plus sale, le plus dangereux probablement.
  Le pont Wilson de Tours.
  Nous le toisâmes longtemps, timidement, peureux des histoires que nous
- avions lu à son sujet.
+ avions lues à son sujet.
  Le parcourant de long en large, nous y cherchâmes une issue : la moins
  crispante pour nous, la moins douloureuse pour notre embarcation.
  Nous avions convenu -- tout de même -- que, en toute sérénité, nous ferions
@@ -2095,7 +2095,7 @@ Le pont passé, nous continuâmes notre chemin, cahin-caha, entre eaux et
  Puis apparut -- comme prévu sur notre carnet de route -- un second vieux
  pont, doublé d'un autre (récent).
  À priori, pas d'ennui ici.
- Mais l'autre con de Wilson, là-bas, nous avait ramolli.
+ Mais l'autre con de Wilson, là-bas, nous avait ramollis.
  Et nous voici, encore une fois, longeant un foutu pont sur toute sa longueur,
  cherchant une issue tranquille.
  Bof.
@@ -2255,7 +2255,7 @@ Olivier le kayakiste
 
 .
  Faire faire un ultra-régime à nos sacs.
- Leurs liposucer un maximum de kilos, pour avoir une chance d'arriver au
+ Leur liposucer un maximum de kilos, pour avoir une chance d'arriver au
  bout de notre aventure.
 \end_layout
 
@@ -2803,7 +2803,7 @@ crise du concombre
 \end_inset
 
 , à cause du soupçon porté au départ sur des lots de concombres biologiques
- en provenance du sud de l'Espagne
+ en provenance du sud de l'Espagne.
 \end_layout
 
 \begin_layout Standard
@@ -3124,7 +3124,7 @@ coloca-Terre
 
 .
  Alors, nous nous attendions à ces rencontres, au moins un peu.
- Pourtant, chacune d'elles nous a paralysé et émerveillé.
+ Pourtant, chacune d'elles nous a paralysés et émerveillés.
  Nous nous sentions comme pris en faute, assistant à une scène qui ne nous
  était pas destinée.
  L'étonnement passé, nous voulions en voir plus, plus longtemps et, surtout,
